...
<string name="workspace_edit_title">Edit</string>
<string name="workspace_edit_title_cd">Edit document title</string>
<string name="workspace_edit_title_hint">Document title</string>
<string name="workspace_edit_title_dialog_title">Rename document</string>
<string name="workspace_dialog_save">Save</string>
<string name="workspace_dialog_cancel">Cancel</string>
<string name="workspace_dialog_confirm_delete">Delete</string>
<string name="workspace_viewer_empty_message">This document has no pages.</string>
<string name="workspace_document_now_empty">Document is now empty. Delete it or keep it for new pages.</string>
<string name="workspace_page_unavailable">Page image unavailable</string>
<string name="workspace_viewer_page_cd">Page %1$d of %2$d</string>

<string name="workspace_page_delete">Delete page</string>
...
